# ROS_study

backup/mobile_robot_sim/: CMakeLists.txt
backup/mobile_robot_sim/.build/: .project  CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
backup/mobile_robot_sim/.build/catkin_generated/: generate_cached_setup.py  package.cmake
backup/mobile_robot_sim/.build/devel/: _setup_util.py
backup/mobile_robot_sim/.build/gmock/: CTestTestfile.cmake
backup/mobile_robot_sim/src/: mobile_robot_sim.cpp
backup/mobile_robot_sim/worlds/sim_simple/: model.config
backup/ros_qml_pack/: CMakeLists.txt
backup/ros_qml_pack/include/: qml_mediator.h
backup/ros_qml_pack/src/: display.qml  navi_node.cpp  navi_start_node.cpp
backup/ros_qml_pack_back/src/: display.qrc
backup/ros_qml_pack_backup2/include/: qml_mediator.h
backup/ros_qml_pack_backup2/src/: display.qml
backup/src_20190326/monitor/: CMakeLists.txt
backup/src_20190326/monitor/include/guide/: main_window.h
backup/src_20190326/monitor/resources/guide/: Face.qml  GuideMenu.qml  main.qml
backup/src_20190326/monitor/src/guide/: main.cpp
backup/src_20190326/sensor/: CMakeLists.txt
backup/test1/: CMakeLists.txt
backup/test1/include/test1/: main_window.hpp  qnode.hpp
backup/test1/src/: main_window.cpp
backup/test1/ui/: main_window.ui
backup/test2/: CMakeLists.txt
backup/test2/src/: pub.cpp.autosave  sub.cpp
backup/test3/: CMakeLists.txt  package.xml
backup/test3/include/test3/: main_window.hpp  qnode.hpp
backup/test3/src/: main.cpp  main_window.cpp  qnode.cpp
backup/test3/ui/: main_window.ui
backup/test4/: CMakeLists.txt  mainpage.dox
backup/test4/include/test4/: main_window.hpp  qnode.hpp
backup/test4/src/: main.cpp  main_window.cpp  qnode.cpp
backup/test5/: CMakeLists.txt  package.xml
backup/test5/src/: line_display.qml
backup/test7/: CMakeLists.txt  main.pro
backup/test7/include/: mainwindow.h
backup/test7/qml/: main.qml  test7.qrc
backup/test7/src/: main.cpp  mainwindow.cpp
backup/test8/: CMakeLists.txt  main.pro
backup/test8/include/: mainwindow.h
backup/test8/qml/: main.qml
backup/test8/src/: main.cpp  mainwindow.cpp
catkin_ws/monitor/include/guide/: main_window.h
catkin_ws/monitor/resources/guide/: Blush.qml  Mouth.qml
catkin_ws/monitor/src/guide/: main_window.cpp
catkin_ws/sensor/: CMakeLists.txt  face_recog.pro
catkin_ws/sensor/resources/face_recog/: SensorBtn.qml  main.qrc
catkin_ws/sensor/src/face_recog/: main.cpp
devel/: .catkin  .rosinstall  setup.sh
devel/lib/mobile_robot_sim/: mobile_robot_sim_node
devel/lib/monitor/: guide  monitor
devel/lib/opencv_example/: opencv_example_node
devel/lib/opencv_tutorial/: opencv_test  opencv_tutorial_node
devel/lib/pkgconfig/: mobile_robot_sim.pc  monitor.pc  opencv_example.pc  opencv_tutorial.pc  pubsub.pc  ros_qml.pc  ros_qml_pack.pc  rosgui.pc  rosgui2.pc  rqt_mypkg.pc  sensor.pc  sensor_publisher.pc  test.pc  test1.pc  test2.pc  test3.pc  test4.pc  test5.pc  test6.pc  test7.pc  test8.pc  ttt.pc  view.pc
devel/lib/pubsub/: listener  listener_qml  listener_qt  listener_wig  talker  talker_qml  talker_qt  talker_wig
devel/lib/ros_qml_pack/: navi_node  navi_start_node
devel/lib/rosgui/: rosgui
devel/lib/sensor/: face_detector  face_recog_sensor
devel/lib/sensor_publisher/: test8
devel/lib/test1/: test1
devel/lib/test2/: pub  sub
devel/lib/test3/: test3
devel/lib/test4/: test4
devel/lib/test5/: listener  listener_qml  listener_qt  listener_wig  talker  talker_qml  talker_qt  talker_wig
devel/lib/test7/: test7
devel/lib/test8/: test8
devel/share/mobile_robot_sim/cmake/: mobile_robot_simConfig.cmake
devel/share/monitor/cmake/: monitorConfig.cmake
devel/share/opencv_example/cmake/: opencv_exampleConfig.cmake
devel/share/opencv_tutorial/cmake/: opencv_tutorialConfig.cmake
devel/share/pubsub/cmake/: pubsubConfig.cmake
devel/share/ros_qml/cmake/: ros_qmlConfig.cmake
devel/share/ros_qml_pack/cmake/: ros_qml_packConfig.cmake
devel/share/rosgui/cmake/: rosguiConfig.cmake
devel/share/rosgui2/cmake/: rosgui2Config.cmake
devel/share/rqt_mypkg/cmake/: rqt_mypkgConfig.cmake
devel/share/sensor/cmake/: sensorConfig.cmake
devel/share/sensor_publisher/cmake/: sensor_publisherConfig.cmake
devel/share/test/cmake/: testConfig.cmake
devel/share/test1/cmake/: test1Config.cmake
install/: .rosinstall
install/lib/pkgconfig/: test1.pc
install/lib/test1/: test1
install/lib/test3/: test3
install/lib/test4/: test4
install/share/test1/: package.xml
src/: monitor.tar  sensor.tar  src.tar
src/mobile_robot_sim/: .project  CMakeLists.txt  package.xml
src/mobile_robot_sim/.build/: .cproject
src/mobile_robot_sim/.build/catkin_generated/: pkg.develspace.context.pc.py  pkg.installspace.context.pc.py  setup_cached.sh
src/mobile_robot_sim/.build/catkin_generated/installspace/: mobile_robot_sim.pc  mobile_robot_simConfig.cmake
src/mobile_robot_sim/.build/catkin_generated/stamps/mobile_robot_sim/: package.xml.stamp
src/mobile_robot_sim/.build/devel/: .catkin  .rosinstall  setup.sh
src/mobile_robot_sim/.build/devel/lib/pkgconfig/: mobile_robot_sim.pc
src/mobile_robot_sim/.build/gmock/: Makefile  cmake_install.cmake
src/mobile_robot_sim/.build/gmock/gtest/: CTestTestfile.cmake
src/mobile_robot_sim/src/: mobile_robot_sim.cpp
src/mobile_robot_sim/worlds/sim_simple/: model.sdf
src/monitor/: CMakeLists.txt  package.xml
src/ros_qml_pack/: CMakeLists.txt  package.xml
src/ros_qml_pack/include/: qml_mediator.h
src/ros_qml_pack/src/: Map.qml  Square.qml  display.qml  display.qrc  navi_node.cpp  navi_start_node.cpp  t_map.html
src/sensor/: CMakeLists.txt  package.xml
src/sensor/include/face_detector/: camera.hpp  sub_node_thread.hpp
src/sensor/include/face_recog/: main_window.h
src/sensor/resources/face_recog/: SensorBtn.qml
src/sensor/src/face_detector/: camera.cpp  face_detector.cpp  main.cpp  sub_node_thread.cpp
src/sensor/src/face_recog/: main.cpp  main_window.cpp
src/test1/: mainpage.dox  package.xml
src/test1/src/: main.cpp  qnode.cpp
(+29 files in other folders)
