<?xml version="1.0"?>
<package format="2">
  <name>mobile_robot_sim</name>
  <version>0.0.0</version>
  <description>The mobile_robot_sim package</description>

  <maintainer email="roskinetic@todo.todo">roskinetic</maintainer>


  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>roslib</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>actionlib</depend>
  <depend>move_base</depend>
  
  <export>
   

  </export>
</package>
