<?xml version="1.0"?>
<package format="1">
  <name>test1</name>
  <version>5.1.0</version>
  <description>

     test1

  </description>
  <maintainer email="anger010@naver.com">ROSKinetic</maintainer>
  <author>ROSKinetic</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
    <run_depend>qt_build</run_depend>
    <run_depend>roscpp</run_depend>
    <run_depend>libqt4-dev</run_depend>

</package>
